martin-mbtiles/tests/snapshots/mbtiles__diff_apply@delta__flat@flat=hash.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "397DFD1A5FC67717672ECAB8375B20B3"  )',
    '(  "agg_tiles_hash_after_apply", "5364C57282B73C341D5D801B8F7675C4"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-remove", NULL  )',
]

[[]]
type = 'table'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE TABLE tiles_with_hash (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             tile_hash text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  5, 0, 1, blob(edit-v2), "FF76830FF90D79BB335884F256031731"  )',
    '(  5, 1, 0, blob(new), "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
    '(  5, 1, 1, NULL, ""  )',
    '(  6, 0, 1, blob(edit-v2a), "03132BFACDB00CC63D6B7DD98D974DD5"  )',
    '(  6, 1, 5, NULL, ""  )',
    '(  6, 1, 6, blob(new), "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles_with_hash'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT zoom_level, tile_column, tile_row, tile_data FROM tiles_with_hash'''
