martin-mbtiles/tests/snapshots/mbtiles__diff_apply@delta__norm@flat=dflt.snap
---
source: martin-mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'images'
sql = '''
CREATE TABLE images (
             tile_id text NOT NULL PRIMARY KEY,
             tile_data blob)'''
values = [
    '(  "", NULL  )',
    '(  "03132BFACDB00CC63D6B7DD98D974DD5", blob(edit-v2a)  )',
    '(  "22AF645D1859CB5CA6DA0C484F1F37EA", blob(new)  )',
    '(  "FF76830FF90D79BB335884F256031731", blob(edit-v2)  )',
]

[[]]
type = 'table'
tbl_name = 'map'
sql = '''
CREATE TABLE map (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_id text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  5, 0, 1, "FF76830FF90D79BB335884F256031731"  )',
    '(  5, 1, 0, "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
    '(  5, 1, 1, ""  )',
    '(  6, 0, 1, "03132BFACDB00CC63D6B7DD98D974DD5"  )',
    '(  6, 1, 5, ""  )',
    '(  6, 1, 6, "22AF645D1859CB5CA6DA0C484F1F37EA"  )',
]

[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "397DFD1A5FC67717672ECAB8375B20B3"  )',
    '(  "agg_tiles_hash_after_apply", "5364C57282B73C341D5D801B8F7675C4"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-remove", NULL  )',
]

[[]]
type = 'index'
tbl_name = 'images'

[[]]
type = 'index'
tbl_name = 'map'

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT map.zoom_level AS zoom_level,
                    map.tile_column AS tile_column,
                    map.tile_row AS tile_row,
                    images.tile_data AS tile_data
             FROM map
             JOIN images ON images.tile_id = map.tile_id'''

[[]]
type = 'view'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE VIEW tiles_with_hash AS
             SELECT
                 map.zoom_level AS zoom_level,
                 map.tile_column AS tile_column,
                 map.tile_row AS tile_row,
                 images.tile_data AS tile_data,
                 images.tile_id AS tile_hash
             FROM map
             JOIN images ON images.tile_id = map.tile_id'''
